--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "page": "^1.11.6",
     "sirv-cli": "^1.0.0",
+    "svelte-quill": "^1.2.0",
     "svelte-simple-datatables": "^0.1.25"
   }
 }
