--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "jodit": "^3.7.2",
     "page": "^1.11.6",
-    "quill": "^1.3.7",
     "sirv-cli": "^1.0.0",
     "svelte-simple-datatables": "^0.1.25"
   }
